--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.1",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/sitemap": "^3.7.0",
+    "astro": "^5.1.1",
     "typescript": "^5.7.2"
   }
 }
